--- a/assets/_sass/_blockly-divider.scss
+++ b/assets/_sass/_blockly-divider.scss
@@ -1,5 +1,5 @@
 $blockly-divider-begin: "\e900";
-$blockly-divider-middle: "\e901";
+$blockly-divider-middle: "\e901\e901\e901\e901\e901\e901\e901\e901\e901\e901";
 $blockly-divider-end: "\e902";
 
 @mixin blockly-divider($divider: false, $position: 'before') {
@@ -12,6 +12,7 @@ $blockly-divider-end: "\e902";
 		font-variant: normal;
 		text-transform: none;
 		line-height: 1;
+		vertical-align: top;
 
 		/* Better Font Rendering =========== */
 		-webkit-font-smoothing: antialiased;
@@ -27,11 +28,11 @@ $blockly-divider-end: "\e902";
 
 @font-face {
 	font-family: 'blockly-divider';
-	src: url('../fonts/blockly-divider.eot?s3qkzg');
-	src: url('../fonts/blockly-divider.eot?s3qkzg#iefix') format('embedded-opentype'),
-	     url('../fonts/blockly-divider.ttf?s3qkzg') format('truetype'),
-	     url('../fonts/blockly-divider.woff?s3qkzg') format('woff'),
-	     url('../fonts/blockly-divider.svg?s3qkzg#blockly-divider') format('svg');
+	src: url('../fonts/blockly-divider.eot?6xppe3');
+	src: url('../fonts/blockly-divider.eot?6xppe3#iefix') format('embedded-opentype'),
+	     url('../fonts/blockly-divider.ttf?6xppe3') format('truetype'),
+	     url('../fonts/blockly-divider.woff?6xppe3') format('woff'),
+	     url('../fonts/blockly-divider.svg?6xppe3#blockly-divider') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -48,4 +49,8 @@ $blockly-divider-end: "\e902";
 }
 .blockly-divider-end:before {
 	content: $blockly-divider-end;
+}
+
+* {
+	vertical-align: top !important;
 }
