--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -254,7 +254,7 @@ strong {
 }
 
 .hero {
-	background: url("//placehold.it/1920x1280/eee.png") no-repeat center center;
+	background: url(../images/hero-bg.jpg) no-repeat center center;
 	background-size: cover;
 
 	.hero-main {
