--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,20 +55,20 @@
 			<button type="button" class="menu-close js-menu-close icon-close"></button>
 		</div>
 		<nav class="nav">
-			<ul>
-				<li><a href="{{ '/' | prepend: site.baseurl }}#pagetop">Home</a></li>
-				<li><a href="{{ '/' | prepend: site.baseurl }}#about" class="js-about-menu-trigger">About <i>＋</i></a>
-					<ul class="js-about-menu">
-						<li><a href="{{ '/' | prepend: site.baseurl }}#about">About</a></li>
-						<li><a href="{{ '/' | prepend: site.baseurl }}#news">News</a></li>
-						<li><a href="{{ '/' | prepend: site.baseurl }}#contact">Contact</a></li>
-						<li><a href="{{ '/' | prepend: site.baseurl }}#staff">Staff</a></li>
-					</ul>
-				</li>
-				<li><a href="{{ '/' | prepend: site.baseurl }}#access">Access</a></li>
-				<li><a href="{{ '/' | prepend: site.baseurl }}#speakers">Speakers</a></li>
-				<li><a href="{{ '/' | prepend: site.baseurl }}#sponsors">Sponsors</a></li>
-				<li><a href="{{ '/' | prepend: site.baseurl }}#timetable">Time Table</a></li>
+			<ul><!--
+			 --><li><a href="{{ '/' | prepend: site.baseurl }}#pagetop">Home</a></li><!--
+			 --><li><a href="{{ '/' | prepend: site.baseurl }}#about" class="js-about-menu-trigger">About <i>＋</i></a>
+						<ul class="js-about-menu">
+							<li><a href="{{ '/' | prepend: site.baseurl }}#about">About</a></li>
+							<li><a href="{{ '/' | prepend: site.baseurl }}#news">News</a></li>
+							<li><a href="{{ '/' | prepend: site.baseurl }}#contact">Contact</a></li>
+							<li><a href="{{ '/' | prepend: site.baseurl }}#staff">Staff</a></li>
+						</ul>
+					</li><!--
+			 --><li><a href="{{ '/' | prepend: site.baseurl }}#access">Access</a></li><!--
+			 --><li><a href="{{ '/' | prepend: site.baseurl }}#speakers">Speakers</a></li><!--
+			 --><li><a href="{{ '/' | prepend: site.baseurl }}#sponsors">Sponsors</a></li><!--
+			 --><li><a href="{{ '/' | prepend: site.baseurl }}#timetable">Time Table</a></li>
 			</ul>
 		</nav>
 		{% include action.html %}
