--- a/_includes/header.html
+++ b/_includes/header.html
@@ -71,7 +71,9 @@
 			 --><li><a href="{{ '/' | prepend: site.baseurl }}#timetable">Time Table</a></li>
 			</ul>
 		</nav>
-		{% include action.html %}
+		<p class="entry">
+			<a href="{{ site.entryurl }}" class="button button-blue icon-flag" target="_blank">Entry</a>
+		</p>
 	</div>
 	<div class="menu-screen js-menu-screen"></div>
 </header>
