Add child menu desktop style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -57,7 +57,7 @@
 		<nav class="nav">
 			<ul><!--
 			 --><li><a href="{{ '/' | prepend: site.baseurl }}#pagetop">Home</a></li><!--
-			 --><li><a href="{{ '/' | prepend: site.baseurl }}#about" class="js-child-menu-trigger">About <i>＋</i></a>
+			 --><li><a href="{{ '/' | prepend: site.baseurl }}#about" class="child-menu-trigger js-child-menu-trigger" data-icon="＋">About</a>
 						<ul class="child-menu js-child-menu">
 							<li><a href="{{ '/' | prepend: site.baseurl }}#about">About</a></li>
 							<li><a href="{{ '/' | prepend: site.baseurl }}#news">News</a></li>
