Change the dummy text of the map

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -1048,7 +1048,7 @@ strong {
 		}
 
 		.map {
-			background: url("//placehold.it/600x400/e9e8dc") no-repeat center;
+			background: url("//placehold.it/600x400/e9e8dc?text=Google+Maps") no-repeat center;
 			background-size: cover;
 			height: 200px;
 		}
